# ryzen_monitor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  readinfo.c  readinfo.cpp  ryzen_monitor.c  ryzen_monitor.cpp
src/libsmu/: CMakeLists.txt  libsmu.cpp
src/libsmu/include/libsmu/: libsmu.h  libsmu.hpp
src/pm_tables/: CMakeLists.txt  macros.h  pm_table_0x240803_3950X.cpp  pm_table_0x240903_3700X_3800X.cpp  pm_table_0x380804_5900X.cpp  pm_table_0x380805_5900X.cpp  pm_table_0x380904_5600X.cpp  pm_table_0x380905_5600X.cpp  pm_table_0x400005_5700G.cpp  pm_tables.c  pm_tables.cpp
src/pm_tables/include/pm_tables/: pm_tables.h
